--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,6 +17,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Delete</th>
         </tr>
       </thead>
       <tbody>
@@ -24,6 +25,13 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td>
+              <form <%= `action=/urls/${url}/delete` %> method="POST">
+                <button type="delete" class="btn btn-outline-danger">
+                  Delete
+                </button>
+              </form>
+            </td>
           </tr>
         <% } %>
       </tbody>
