--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,6 +17,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Edit</th>
           <th scope="col">Delete</th>
         </tr>
       </thead>
@@ -25,6 +26,14 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td>
+              <form <%= `action=/urls/${url}/` %> method="GET">
+                <button type="delete" class="btn btn-outline-primary">
+                  Edit
+                </button>
+              </form>
+            </td>
+
             <td>
               <form <%= `action=/urls/${url}/delete` %> method="POST">
                 <button type="delete" class="btn btn-outline-danger">
@@ -36,7 +45,6 @@
         <% } %>
       </tbody>
     </table>
-    <a href =#>Click here to shorten another URL</a>
   </main>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
