--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -4,11 +4,37 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        </div>
+        <div>
+        <form class="form-inline" action="/login" method="POST">
+            <input class="form-control" type="text" name="username" placeholder="Enter Username" style="width: 300px; margin: 1em">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
       </div>
     </div>
+
+    
+
+
+    </div>
+    <% if (username) { %>
+     
+      <span style="margin-left: 10em" class="pr-3 navbar-text">Current User: <%= username %> </span>
+      <form class="form-inline" action="/logout" method="post">
+        <button class="btn btn-dark btn-med" type="submit">Log Out</button>
+      </form>
+    <% } else { %>
+      <form action="/login" method="post">
+        <label class="navbar-text">
+          <input type="text" name="username">
+        </label>
+        <button class="btn btn-dark btn-sm" type="submit">Log In</button>
+      </form>
+    <% } %>
+  
   </nav>
 </header>
