--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -7,33 +7,24 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        </div>
-        <div>
-        <form class="form-inline" action="/login" method="POST">
-            <input class="form-control" type="text" name="username" placeholder="Enter Username" style="width: 300px; margin: 1em">
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </div>
-        </form>
       </div>
-    </div>
-
     
-
-
-    </div>
     <% if (username) { %>
      
-      <span style="margin-left: 10em" class="pr-3 navbar-text">Current User: <%= username %> </span>
-      <form class="form-inline" action="/logout" method="post">
+      <span style="margin-left: 1em" class="pr-3 navbar-text">Current User: <%= username %> </span>
+      <form class="form-inline" action="/logout" method="POST">
         <button class="btn btn-dark btn-med" type="submit">Log Out</button>
       </form>
+
     <% } else { %>
-      <form action="/login" method="post">
+
+      <form action="/login" method="POST">
         <label class="navbar-text">
           <input type="text" name="username">
         </label>
         <button class="btn btn-dark btn-sm" type="submit">Log In</button>
       </form>
+      
     <% } %>
   
   </nav>
