--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,12 +25,10 @@
         <% for(let url in urls) { %>
           <tr>
             <td><%= url %></td>
-            <td><%= urls[url] %></td>
+            <td><%= urls[url].longURL %></td>
             <td>
               <form <%= `action=/urls/${url}/` %> method="GET">
-                <button type="delete" class="btn btn-outline-primary">
-                  Edit
-                </button>
+                <button class="btn btn-outline-secondary" type="submit">Edit</button>
               </form>
             </td>
 
