--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-
+    <%- include('partials/_header') %>
     <main style="margin: 1em;">
       <h3>Please Log In</h3>
       <form class="form-inline" action="/login" method="POST">
