changed error messaging to be more specific

--- a/views/urls_noshow.ejs
+++ b/views/urls_noshow.ejs
@@ -11,6 +11,7 @@
 <body>
   <%- include('partials/_header') %>
   <main style="margin: 1em;">
+    <h1>Error 403: Forbidden</h1>
     <h3>You must <a href="/login">log in</a> before you can access this page.</h3>
     <h4>You may need to <a href="/register">register</a> before you can log in.</h4>
     <table class="table">
